# SFRM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
matlab/: BlockOutlier.m  ExtractAffinityMatrix.m  MultiView.m  PmatNcut.m  demoTimingAnysis.m  drawing.m  extractNcutImages.m  pathsetup.m
matlab/IO/: getFaceKpsFromJson.m  getKpsfromJson.m
matlab/MSF/: MSF.m  testMSF.m
matlab/Ncut/: affinityic.mexa64  cimgnbmap.mexa64  compile_all.m  demoNcutClustering.m  demoNcutImage.m  eigs_new.m  mex_w_times_x_symmetric.mexa64  ncut.m  sparsifyc.mexa64  spmtimesd.mexa64
matlab/basic_geometry/: SFRMEstimateRelativePose.m  calEssentialEightPoints.m  calEssentialEightPointsTrival.m  calEssentialFivePoints.m  calHomographyMatrix.m  compare_methods_5pt.m  compare_methods_6pt.m  compile_all.m  eul2rotm_server.m  partsolveE.cc  partsolveE.mexa64  partsolveE6.cc  partsolveE6.mexa64  relativePoseWithEssential.m  rigid_transform_3D.m  solveE.cc  solveE.mexa64  solveE_nister.cc  solveE_nister.mexa64
matlab/dict/: coco-K128.mat
matlab/paper_figure/: Figure_Block_wise.m  Figure_Flag_Qualitiy.m  Figure_Flag_result.m  Figure_sim_diff.m  drawTiming.m
matlab/slap_functions/: basicPoseLifting.m  cal2poseEssentialSample.m  cal2poseResidual_EightSample.m  cal2poseResidual_FirstLayer.m  cal2poseResidual_FiveSample.m  cal2poseResidual_MultiLayer.m  cal2poseResidual_ZeroLayer.m  cal2poseResidual_direct.m  calAlgebraError.m  calDEFinal.m  calDHFinal.m  kpsNormalize.m
matlab/test/: testEssential.m  testHomography.m  testTriangulation.m
matlab/util/: Copy_of_DataToMat.m  Copy_of_panoDataToMat.m  DomeDataToMat.m  FaceDataToMat.m  FaceToTxt.m  FlagToMat.m  GenerateBundleProblem.m  SkeletonDataToMat.m  cycle_walkProcess.m  dance0Sample.m  panoDataToMat.m  panoGroundTruth.m
matlab/visualization/: GenerateDataset.m  TransformYuna.m  (+13 more)
scripts/: bachImageReformat.m  bachImageResize.m  bachJsonConverter.m  cal2poseResidual.m  cal2poseResidual_new.m  cal2poseResidual_v5.m  cal2poseResidual_v6.m  cal3DskeletonForGroup.m  calEssentialFivePoints.m  calEssentialMatrix.m  calFundamental.m  calHomographyMatrix.m  calTriangulation.m  checkFramesServer.m  checkFramesViewer.m  collectGroup.m  collectGroup5points.m  decompHomography.m  drawCam.m  getGroupForFrame.m  getKpsfromJson.m  getKpsfromp2d.m  group_withoutPose.m  kpsNormalize.m  main_test.m  render3DBone.m  renderSkeletonFile.m  run_openpose.sh  setGlobalVal.m  testGoodAlg.m  test_checkFrames.m  view_openpose.sh
src/: CMakeLists.txt  ba_main.cpp  main_slap.cpp  run_bundle.sh  slap_test.cpp  view_skeleton.cpp
(+23 files in other folders)
